--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html"><img style="width: 40rem" src="images/EVOL_new.jpg"/></a></h1>
+                <h1><a href="index.html"></a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
