--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="index.html" class="active">Home</a></li>
-                        <li><a href="publication.html" class="scroll">Publications</a></li>
-                        <li><a href="people.html" class="scroll">Members</a></li>
-                        <li><a href="seminar.html" class="scroll">Seminar</a></li>
-                        <li><a href="opening.html" class="scroll">Join Us</a></li>
+                        <li><a href="publication.html" class="scroll">Publication</a></li>
+                        <li><a href="people.html" class="scroll">Research</a></li>
+                        <li><a href="opening.html" class="scroll">Contact</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div><!--//navigation-->
