--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-left">
+                    <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="publication.html" class="scroll">Publication</a></li>
                         <li><a href="people.html" class="scroll">Research</a></li>
