--- a/index.html
+++ b/index.html
@@ -89,17 +89,16 @@
     </nav>
 </div>
 
-<div class="banner background cover" id="cover">
+<div class="banner" id="cover">
     <div class="container">
             <div class="banner-text">
                 <div  id="top" class="callbacks_container">
                     <ul class="rslides" id="slider3">
                         <li>
                             <div class="banner-text-info" >
-                                <h2>Welcome to Wei's Group</h2>
+                                <h2>Welcome to Li's Group</h2>
                             </div>
                         </li>
-
                     </ul>
                 </div>
             </div> 
