--- a/index.html
+++ b/index.html
@@ -105,17 +105,13 @@
     </div>
 </div>
 
-<!-- <div class="album-li-pic banner">
-    <img src="./images/BJTU_0.jpg" alt="">
-</div> -->
-
 <script>
-    // const cof = 880 / 1792;
+    const cof = 500 / 1792;
     const width = window.innerWidth;
     const img = document.getElementById('cover');
 
     img.style.minHeight = (cof * width).toString() + "px";
-    img.style.background = "url(images/dianxin1.jpg) no-repeat center 0px";
+    img.style.background = "url(images/p1.jpg) no-repeat center 0px";
     img.style.backgroundSize = "cover";
 </script>
 
