--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </div>
 
 <script>
-    const cof = 500 / 1792;
+   // const cof = 500 / 1792;
     const width = window.innerWidth;
     const img = document.getElementById('cover');
 
