--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <div class="banner" id="cover">
     <div class="container">
-            <div class="banner-text">
+           <-- <div class="banner-text">
                 <div  id="top" class="callbacks_container">
                     <ul class="rslides" id="slider3">
                         <li>
@@ -101,7 +101,7 @@
                         </li>
                     </ul>
                 </div>
-            </div> 
+            </div> -->
     </div>
 </div>
 
