--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Jian ZHAO1 (赵健1)</title>
+    <title>Xiang LI (李响)</title>
     <!-- Custom Theme files -->
     <link rel="icon" href="images/p1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -125,13 +125,13 @@
             <div class="team-row center-row">
                 <div class="col-md-3 team-grids">
                     <div class="team-img">
-                        <img class="teacher-img" src="images/people/jian_zhao.jpg" alt="">
+                        <img class="teacher-img" src="images/people/xiang_li.png" alt="">
                         <!-- <h4>Yunchao Wei</h4> -->
                         <!-- <p>Professor</p> -->
                     </div>
                 </div>
                 <div class="col-md-9">
-                    <h3>Jian ZHAO 赵健</h3>
+                    <h3>Xiang LI 李响</h3>
                     <!-- <i class="quote">"行稳致远 Knowledge changes fate."</i> -->
                     <!-- <br> -->
                     <p> 
