--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     const img = document.getElementById('cover');
 
     img.style.minHeight = (cof * width).toString() + "px";
-    img.style.background = "url(images/shenzhen.png) no-repeat center 0px";
+    img.style.background = "url(images/shenzhen1.png) no-repeat center 0px";
     img.style.backgroundSize = "cover";
 </script>
 
