--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Xiang LI (李响)</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="images/p1.png">
+    <link rel="icon" href="images/xiang_li.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
@@ -15,7 +15,7 @@
         window.scrollTo(0, 1);
     } </script>
     <script>
-        const cof = 500 / 1792;
+        const cof = 550 / 1792;
 
         adaptiveHeight = function() {
             const width = window.innerWidth;
@@ -126,28 +126,28 @@
                     <!-- <br> -->
                     <p> 
                         <!-- Professor<br/> -->
-                        Leader of Evolutionary Vision+x Oriented Learning (EVOL) Lab & Principal Research Scientist @ The Institute of AI (TeleAI), China Telecom, Beijing, P.R. China
-                        <br>
+                        Leader of XXXX China Iron & Steel Research Institue, Beijing, P.R. China
+                       <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
-                        <br>
-                    <strong>Office</strong>: 11 Dongzhimen South Street, Dongcheng District, Beijing, China 100027<br/>
-                    <strong>Phone</strong>: (86) 15313525501 <br>
-                    <strong>Email</strong>: zhaoj90 (at) chinatelecom (dot) cn OR jian_zhao (at) nwpu (dot) edu (dot) cn OR zhaojian90 (at) u (dot) nus (dot) edu OR zhaoj08 (at) pcl (dot) ac (dot) cn<br/>
+                        <br>-->
+                    <strong>Office</strong>: XXXX, Shenzhen, China 518000<br/>
+                    <strong>Phone</strong>: (86) XXXX <br>
+                    <strong>Email</strong>: XXXX <br/>
                     <strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>
                     
-                    <a href="https://iopen.nwpu.edu.cn/info/1349/4636.htm">
+                    <!--<a href="https://iopen.nwpu.edu.cn/info/1349/4636.htm">
                         <img src="./images/iopen.png" alt="" height="22px">
                     </a>
                     <a href="https://github.com/ZhaoJ9014">
                         <img src="./images/github.png" alt="" height="20px">
                     </a>
-                    <a href="https://www.linkedin.com/in/%E5%81%A5-%E8%B5%B5-5546952a1/?locale=en_US">
+                    <a href="https://www.linkedin.com/in/%E5%81%A5-%E8%B5%B5-5546952a1/?locale=en_US">XXXX
                         <img src="./images/in.ico" alt="" height="20px">
                     </a>
                     <a href="https://scholar.google.com.sg/citations?hl=en&user=zdhRJCkAAAAJ&view_op=list_works&gmla=AJsN-F4PURIx5GMQHVpprJJBjTsNC62YCHjxGsKOwVhrkZ1aJsLgBiuKPBbAgbdcE5_KNw3OnLQgOVSjlqmS6gc-6ti0M2K5o-klHgoOywFCbdaaGnpis130zvgoZFJkVfmoNKpo8Krp" target="_blank"><i
                         ></i> 
                          <img src="./images/google_scholar.png" alt="" height="20px">
-                     </a>
+                     </a>-->
                     </p>
                 </div>
                 <div class="clearfix"></div>
