--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                     <!-- <br> -->
                     <p> 
                         <!-- Professor<br/> -->
-                        Leader of XXXX China Iron & Steel Research Institue, Beijing, P.R. China
+                        Leader of XXXX 
+                        <br>
+                        @ China Iron & Steel Research Institue, Beijing, P.R. China
+                        <br>
                        <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
                         <br>-->
