--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
             </div>
         </div>
         <br>
-        <div class="container">
-            <h3 class="title">Research Interests</h3>
+        <div class="container">                            <!--跳转join us-->
+            <h3 class="title">Educational Background</h3>
 
-            <div class="center-row" style="font-size: 16px;">
+            <div class="deeper-row" style="font-size: 16px;">
 
                 <p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
