--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
         </div>
         <br>
         <div class="container">                            <!--跳转join us-->
-            <h3 class="title">Educational Background</h3>
+            <h3 class="title"><p>Educational Background</p></h3>
 
-            <div class="deeper-row" style="font-size: 16px;">
+            <div class="center-row" style="font-size: 16px;">
 
                 <p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
