--- a/index.html
+++ b/index.html
@@ -162,24 +162,24 @@
 
             <div class="center-row" style="font-size: 16px;">
 
-                <p>
+                <!--<p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
                 </p>
 
-                <ul id="interests">
+                <ul id="interests">-->
                     <li>
-                        Multimedia Analytics: detection and tracking of small objects in complex scenarios, etc.
+                        2014-2021 Ph.D., University of California, Berkeley
                     </li>
                     <li>
-                        Vicinagearth Security: perception and understanding of visual targets under unconstrained conditions, etc.
+                        2011-2014 B.E., University of Cincinnati
                     </li>
                     <li>
-                        AI Agent (AI for Good): Autonomous agent for Beauty, Food, Home, Tour, Clip, etc.
+                        2008-2014 B.E., Shanghai Jiao Tong University
                     </li>
                 </ul>
-                <p>
+                <!--<p>
                     More details can be found <a href="opening.html">here</a>. 
-                </p>
+                </p>-->
 
             </div>
         </div>
