--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">                            <!--跳转join us-->
             <h3 class="title"><p>Educational Background</p></h3>
 
-            <div class="center-row" style="font-size: 16px;">
+            <div class="center-row" target="_blank" style="font-size: 16px;">
 
                 <!--<p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
@@ -193,8 +193,7 @@
                 <ul class="tl">
                     <li class="tl-item" ng-repeat="item in retailer_history">
 
-                        <div class="item-title">[ ACTIVITY ]</div>
-                        <div class="item-detail">01 Dec 2024, Will organize the Resource-Limited Infrared Small Target Detection (<a href="https://limitirstd.github.io" target="_blank">LimitIRSTD</a>) Challenge with ICPR 2024.
+                        <div class="item-detail">  target="_blank">LimitIRSTD</a>) Challenge with ICPR 2024.
 
                         </div>
                     </li>
