--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
         </div>
         <br>
-        <div class="container">                            <!--跳转join us-->
+        <div class="container">                            
             <h3 class="title"><p>Educational Background</p></h3>
 
             <div class="center-row" target="_blank" style="font-size: 16px;">
