--- a/index.html
+++ b/index.html
@@ -185,7 +185,25 @@
         </div>
 
 
+        <div class="container">                            
+            <h3 class="title"><p>Work Experience</p></h3>
 
+            <div class="center-row" target="_blank" style="font-size: 16px;">
+                    <li>
+                        2023-2024 Postdoctoral Scholar, University of California, Berkeley
+                    </li>
+                    <li>
+                        2019-2022 Senior Engineer, Arevo, Inc.
+                    </li>
+                    <li>
+                        2015-2016 Algorithm Engineer, NASA Ames Research Center
+                    </li>
+                    <li>
+                        2012-2013 Product Engineer, Vega Americas, Inc.
+                    </li>
+                </ul>
+            </div>
+        </div> 
 
         <!-- awards -->
         
