--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">                            
             <h3 class="title"><p>Educational Background</p></h3>
 
-            <div class="center-row" target="_blank" style="font-size: 16px;">
+            <div class="center-row" style="font-size: 16px; color: black;">
 
                 <!--<p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
@@ -188,7 +188,7 @@
         <div class="container">                            
             <h3 class="title"><p>Work Experience</p></h3>
 
-            <div class="center-row" target="_blank" style="font-size: 16px;">
+            <div class="center-row" style="font-size: 16px;">
                     <li>
                         2023-2024 Postdoctoral Scholar, University of California, Berkeley
                     </li>
