--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <div class="container">                            
             <h3 class="title"><p>Work Experience</p></h3>
 
-            <div class="center-row" style="font-size: 16px;">
+            <div class="center-row" style="font-size: 16px; color: #333333;">
                     <li>
                         2023-2024 Postdoctoral Scholar, University of California, Berkeley
                     </li>
