--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container">                            
             <h3 class="title"><p>Educational Background</p></h3>
 
-            <div class="center-row" style="font-size: 16px; color: black;">
+            <div class="center-row" style="font-size: 16px; color: black !important;">
 
                 <!--<p>
                     My research interests include Multimedia Analytics, Vicinagearth Security, and AI Agent. In particular, I have recently worked in:
