--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <h3 class="title"><p>Work Experience</p></h3>
 
             <div class="center-row" style="font-size: 16px; color: #333333;">
-                    <li>
+                    <li style="color: black;">
                         2023-2024 Postdoctoral Scholar, University of California, Berkeley
                     </li>
                     <li>
