--- a/index.html
+++ b/index.html
@@ -188,17 +188,17 @@
         <div class="container">                            
             <h3 class="title"><p>Work Experience</p></h3>
 
-            <div class="center-row" style="font-size: 16px; color: #333333;">
-                    <li style="color: black;">
+            <div class="center-row" style="font-size: 16px;">
+                    <li style="color: #333333;">
                         2023-2024 Postdoctoral Scholar, University of California, Berkeley
                     </li>
-                    <li>
+                    <li style="color: #333333;">
                         2019-2022 Senior Engineer, Arevo, Inc.
                     </li>
-                    <li>
+                    <li style="color: #333333;">
                         2015-2016 Algorithm Engineer, NASA Ames Research Center
                     </li>
-                    <li>
+                    <li style="color: #333333;">
                         2012-2013 Product Engineer, Vega Americas, Inc.
                     </li>
                 </ul>
