--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
         <br>
         <div class="container">                            
-            <h3 class="title"><p>Educational Background</p></h3>
+            <h3 class="title"><p style="color: #333333;">Educational Background</p></h3>
 
             <div class="center-row" style="font-size: 16px; color: black !important;">
 
@@ -167,13 +167,13 @@
                 </p>
 
                 <ul id="interests">-->
-                    <li>
+                    <li style="color: #333333;">
                         2014-2021 Ph.D., University of California, Berkeley
                     </li>
-                    <li>
+                    <li style="color: #333333;">
                         2011-2014 B.E., University of Cincinnati
                     </li>
-                    <li>
+                    <li style="color: #333333;">
                         2008-2014 B.E., Shanghai Jiao Tong University
                     </li>
                 </ul>
@@ -186,7 +186,7 @@
 
 
         <div class="container">                            
-            <h3 class="title"><p>Work Experience</p></h3>
+            <h3 class="title"><p style="color: #333333;">Work Experience</p></h3>
 
             <div class="center-row" style="font-size: 16px;">
                     <li style="color: #333333;">
