--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Xiang LI 李响</h3>
                     <!-- <i class="quote">"行稳致远 Knowledge changes fate."</i> -->
                     <!-- <br> -->
-                    <p> 
+                    <p style="color: #333333;"> 
                         <!-- Professor<br/> -->
                         Leader of XXXX 
                         <br>
