--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
 
 
         <div class="container">                            
-            <h3 class="title"><p style="color: #333333;">Work Experience</p></h3>
+            <h3 class="title"><p style="color: #4d4d4d;">Work Experience</p></h3>
 
             <div class="center-row" style="font-size: 16px;">
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2023-2024 Postdoctoral Scholar, University of California, Berkeley
                     </li>
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2019-2022 Senior Engineer, Arevo, Inc.
                     </li>
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2015-2016 Algorithm Engineer, NASA Ames Research Center
                     </li>
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2012-2013 Product Engineer, Vega Americas, Inc.
                     </li>
                 </ul>
