--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Xiang LI 李响</h3>
                     <!-- <i class="quote">"行稳致远 Knowledge changes fate."</i> -->
                     <!-- <br> -->
-                    <p style="color: #333333;"> 
+                    <p style="color: #666666;"> 
                         <!-- Professor<br/> -->
                         Leader of XXXX 
                         <br>
@@ -158,7 +158,7 @@
         </div>
         <br>
         <div class="container">                            
-            <h3 class="title"><p style="color: #333333;">Educational Background</p></h3>
+            <h3 class="title"><p style="color: #666666;">Educational Background</p></h3>
 
             <div class="center-row" style="font-size: 16px; color: black !important;">
 
@@ -167,13 +167,13 @@
                 </p>
 
                 <ul id="interests">-->
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2014-2021 Ph.D., University of California, Berkeley
                     </li>
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2011-2014 B.E., University of Cincinnati
                     </li>
-                    <li style="color: #333333;">
+                    <li style="color: #666666;">
                         2008-2014 B.E., Shanghai Jiao Tong University
                     </li>
                 </ul>
@@ -186,7 +186,7 @@
 
 
         <div class="container">                            
-            <h3 class="title"><p style="color: #4d4d4d;">Work Experience</p></h3>
+            <h3 class="title"><p style="color: #666666;">Work Experience</p></h3>
 
             <div class="center-row" style="font-size: 16px;">
                     <li style="color: #666666;">
