--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html" style="font-size: 2rem; font-weight: bold; text-decoration: none; color: black;">Li Research Group</a></h1>
+                <h1><a href="index.html" 
+                       style="font-size: 3rem; font-weight: bold; text-decoration: none; color: black; display: inline-block; margin-top: 1cm;">
+                       Li Research Group
+                    </a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
