--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="navbar-header navbar-left">
                 <h1><a href="index.html" 
-                       style="font-size: 3rem; font-weight: bold; text-decoration: none; color: black; display: inline-block; margin-top: 1cm;">
+                       style="font-size: 3rem; font-weight: bold; text-decoration: none; color: black; display: inline-block; margin-top: 0.7cm; font-family: inherit;">
                        Li Research Group
                     </a></h1>
             </div>
