--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
                         <br>
                         @ China Iron & Steel Research Institue, Beijing, P.R. China
                         <br>
+                         Associate Professor & Ph.D. Supervisor at China Iron & Steel Research Institute Group
+                        <br>
                        <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
                         <br>-->
