--- a/index.html
+++ b/index.html
@@ -129,11 +129,13 @@
                     <!-- <br> -->
                     <p style="color: #666666;"> 
                         <!-- Professor<br/> -->
-                        Leader of XXXX 
-                        <br>
-                        @ China Iron & Steel Research Institue, Beijing, P.R. China
-                        <br>
                          Associate Professor & Ph.D. Supervisor at China Iron & Steel Research Institute Group
+                        <br>
+                        Chief Expert of Intelligent Algorithms at Steel Research International New Materials Innovation Center
+                        <br>
+                        Selected Participant of the National Overseas High-level Talent Introduction Program (Youth, Organization Department of the CPC Central Committee)
+                        <br>
+                        Leading Talent in Artificial Intelligence Technology at Central Enterprises (State-owned Assets Supervision and Administration Commission of the State Council)
                         <br>
                        <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
