--- a/index.html
+++ b/index.html
@@ -133,9 +133,13 @@
                         <br>
                         Chief Expert of Intelligent Algorithms at Steel Research International New Materials Innovation Center
                         <br>
-                        Selected Participant of the National Overseas High-level Talent Introduction Program (Youth, Organization Department of the CPC Central Committee)
+                        Selected Participant of the National Overseas High-level Talent Introduction Program 
                         <br>
-                        Leading Talent in Artificial Intelligence Technology at Central Enterprises (State-owned Assets Supervision and Administration Commission of the State Council)
+                        (Youth, Organization Department of the CPC Central Committee)
+                        <br>
+                        Leading Talent in Artificial Intelligence Technology at Central Enterprises 
+                        <br>
+                        (State-owned Assets Supervision and Administration Commission of the State Council)
                         <br>
                        <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
@@ -143,7 +147,7 @@
                     <strong>Office</strong>: XXXX, Shenzhen, China 518000<br/>
                     <strong>Phone</strong>: (86) XXXX <br>
                     <strong>Email</strong>: XXXX <br/>
-                    <strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>
+                    <!--<strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>-->
                     
                     <!--<a href="https://iopen.nwpu.edu.cn/info/1349/4636.htm">
                         <img src="./images/iopen.png" alt="" height="22px">
