--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
                         <!-- Professor<br/> -->
                          Associate Professor & Ph.D. Supervisor at China Iron & Steel Research Institute Group
                         <br>
-                        Chief Expert of Intelligent Algorithms at Steel Research International New Materials Innovation Center
+                        Chief Expert of Intelligent Algorithms at Steel Research International New Materials
+                        <br>
+                        Innovation Center
                         <br>
                         Selected Participant of the National Overseas High-level Talent Introduction Program 
                         <br>
