--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                        <!-- <br>
                         Researcher & Ph.D. Supervisor @ School of Artificial Intelligence, Optics and Electronics (iOPEN) ｜ Northwestern Polytechnical University (NWPU), Xi'an Shanxi, P.R. China
                         <br>-->
-                    <strong>Office</strong>: XXXX, Shenzhen, China 518000<br/>
+                    <!--<strong>Office</strong>: XXXX, Shenzhen, China 518000<br/>-->
                     <strong>Phone</strong>: (86) XXXX <br>
                     <strong>Email</strong>: XXXX <br/>
                     <!--<strong>Prospective Students</strong> : <a href="opening.html">Contact me</a>. <br>-->
