--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html" class="active">Home</a></li>
                         <li><a href="publication.html" class="scroll">Publication</a></li>
-                        <li><a href="people.html" class="scroll">Research</a></li>
-                        <li><a href="opening.html" class="scroll">Contact</a></li>
+                        <li><a href="research.html" class="scroll">Research</a></li>
+                        <li><a href="contact.html" class="scroll">Contact</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div><!--//navigation-->
