--- a/contact.html
+++ b/contact.html
@@ -54,11 +54,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left">
-                        <li><a href="index.html" class="scroll">Home</a></li>
-                        <li><a href="publication.html" class="scroll">Publications</a></li>
-                        <li><a href="people.html" class="scroll">Members</a></li>
-                        <li><a href="seminar.html" class="scroll">Seminar</a></li>
-                        <li><a href="opening.html" class="active">Join Us</a></li>
+                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="publication.html" class="scroll">Publication</a></li>
+                        <li><a href="research.html" class="scroll">Research</a></li>
+                        <li><a href="contact.html" class="scroll">Contact</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div><!--//navigation-->
