--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,10 @@
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header navbar-left">
-                <h1><a href="index.html"><img style="width: 40rem" src="images/EVOL_new.jpg"/></a></h1>
+                 <h1><a href="index.html" 
+                       style="font-size: 3.5rem; font-weight: bold; text-decoration: none; color: #666666; display: inline-block; margin-top: 0.1cm; font-family: 'Calibri', Times, serif;">
+                       Li Research Group
+                    </a></h1>
             </div>
             <!--navigation-->
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
