--- a/research.html
+++ b/research.html
@@ -72,7 +72,7 @@
 
 <div class="container">
 
-    <h4 class="title">Members</h4>
+    <h4 class="title">Research Situation</h4>
    
     <h4 class="title"></h4>
 </div>
