--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Xiang LI (李响)</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="images/xiang_li.png">
+    <link rel="icon" href="images/p1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
