--- a/seminar.html
+++ b/seminar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Jian ZHAO (赵健)</title>
+   <title>Xiang LI (李响)</title>
     <!-- Custom Theme files -->
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/p1.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="keywords" content=""/>
