--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
     </nav>
 </div>
 
+<div class="banner-text-info">
+    <h2>AI4Mat (AI for Materials) Lab</h2>
+    <p>Advancing research in materials science using AI technologies.</p>
+</div>
+
 <div class="banner background cover" id="cover">
     <div class="container">
           <!-- <div class="banner-text">
